--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -16,6 +16,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  margin-bottom: 40px;
 }
 .catalog-item {
   width: 335px;
@@ -26,6 +27,12 @@
   background-color: #f3f3f3;
   padding: 42px 28px 24px 28px;
 }
+
+.catalog-item:nth-child(5),
+.catalog-item:nth-child(6) {
+  display: none;
+}
+
 .catalog-item picture {
   width: 208px;
   align-self: center;
@@ -50,6 +57,8 @@
 }
 
 .btn-catalog {
+  display: block;
+  margin: 0 auto;
   width: 160px;
   height: 48px;
   border-radius: 16px;
@@ -58,9 +67,6 @@
   font-size: 14px;
   line-height: 1.28;
   color: #fbfbfb;
-  display: block;
-  margin-left: 88px;
-  margin-top: 40px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-catalog:focus {
@@ -86,6 +92,11 @@
   .catalog-item {
     width: 344px;
     padding: 34px 32px 24px;
+  }
+
+  .catalog-item:nth-child(5),
+  .catalog-item:nth-child(6) {
+    display: flex;
   }
 
   .catalog-item picture {
