--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,97 +1,98 @@
 /* Footer CSS by Taras Pererva */
 .footer {
-    padding-bottom: 20px;
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 .footer-container {
-    background-color: var(--main);
-    border-radius: 30px;
-    max-width: 335px;
-    margin: 0 auto;
-    padding: 40px 28px 28px;
+  background-color: var(--main);
+  border-radius: 30px;
+  max-width: 335px;
+  margin: 0 auto;
+  padding: 40px 28px 28px;
 }
 
 /* footer-wrapper-one */
 
 .footer-wrapper-one {
-    margin-bottom: 92px;
+  margin-bottom: 92px;
 }
 
 .footer-logo {
-    display: inline-block;
-    font-family: 'Gilroy', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: -0.02em;
-    color: var(--background);
-    margin-bottom: 20px;
+  display: inline-block;
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: -0.02em;
+  color: var(--background);
+  margin-bottom: 20px;
 }
 
 .footer-media-list {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
 }
 
 .footer-media-item {
-    width: 34px;
-    height: 34px;
+  width: 34px;
+  height: 34px;
 }
 
 .footer-media-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid rgba(251, 251, 251, 0.1);
-    border-radius: 10px;
-    width: 100%;
-    height: 100%;
-    fill: var(--background);
-    opacity: 0.8;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(251, 251, 251, 0.1);
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  fill: var(--background);
+  opacity: 0.8;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-media-item:hover .footer-media-link,
 .footer-media-item:focus .footer-media-link {
-    opacity: 1;
+  opacity: 1;
 }
 
 .footer-phone {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .footer-phone-num {
-    display: inline-block;
-    padding: 14px 20px;
-    min-width: 152px;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.33;
-    text-transform: uppercase;
-    text-align: center;
-    color: var(--background);
-    border: 1px solid rgba(251, 251, 251, 0.2);
-    border-radius: 16px;
-    font-style: normal;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-block;
+  padding: 14px 20px;
+  min-width: 152px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--background);
+  border: 1px solid rgba(251, 251, 251, 0.2);
+  border-radius: 16px;
+  font-style: normal;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-phone-num:hover,
 .footer-phone-num:focus {
-    background-color: var(--background);
-    color: var(--main);
+  background-color: var(--background);
+  color: var(--main);
 }
 
 .footer-description {
-    max-width: 279px;
-    margin: 0 auto;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: -0.02em;
-    text-align: center;
-    color: var(--background);
+  max-width: 279px;
+  margin: 0 auto;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: var(--background);
 }
 
 /* /footer-wrapper-one */
@@ -99,109 +100,109 @@
 /* footer-wrapper-two */
 
 .footer-wrapper-two {
-    font-family: 'Gilroy', sans-serif;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.33;
-    color: var(--background);
+  font-family: 'Gilroy', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  color: var(--background);
 }
 
 .footer-navigation {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    margin-bottom: 48px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin-bottom: 48px;
 }
 
 .footer-navigation::after {
-    display: block;
-    content: '';
-    position: absolute;
-    bottom: -24px;
-    width: 100%;
-    height: 1px;
-    background-color: rgba(251, 251, 251, 0.1);
+  display: block;
+  content: '';
+  position: absolute;
+  bottom: -24px;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(251, 251, 251, 0.1);
 }
 
 .footer-nav-list {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 147px;
-    gap: 8px 16px;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 147px;
+  gap: 8px 16px;
 }
 
 .footer-nav-link {
-    position: relative;
-    padding: 8px 0;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.33;
-    color: var(--background);
+  position: relative;
+  padding: 8px 0;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  color: var(--background);
 }
 
 .footer-nav-link::after {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    display: block;
-    top: 22px;
-    left: 50%;
-    margin-left: -4px;
-    width: 8px;
-    height: 8px;
-    border-radius: 4px;
-    background-color: currentColor;
-    opacity: 0;
-    color: var(--accent);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  display: block;
+  top: 22px;
+  left: 50%;
+  margin-left: -4px;
+  width: 8px;
+  height: 8px;
+  border-radius: 4px;
+  background-color: currentColor;
+  opacity: 0;
+  color: var(--accent);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-nav-link:is(.current, :hover, :focus)::after {
-    opacity: 1;
+  opacity: 1;
 }
 
 .footer-address {
-    max-width: 83px;
-    font-weight: 500;
-    font-size: 12px;
-    font-style: normal;
-    line-height: 1.33;
-    color: var(--background);
+  max-width: 88px;
+  font-weight: 500;
+  font-size: 12px;
+  font-style: normal;
+  line-height: 1.33;
+  color: var(--background);
 }
 
 .footer-copy {
-    opacity: 0.9;
+  opacity: 0.9;
 }
 
 .copy-description {
-    font-weight: 500;
-    font-size: 10px;
-    line-height: 1.4;
-    letter-spacing: -0.02em;
-    color: rgba(251, 251, 251, 0.5);
-    margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 1.4;
+  letter-spacing: -0.02em;
+  color: rgba(251, 251, 251, 0.5);
+  margin-bottom: 8px;
 }
 
 .copy-rules-list {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .copy-rules-list {
-    color: rgba(251, 251, 251, 0.5);
-    font-size: 10px;
-    font-weight: 500;
-    line-height: 1.4;
-    letter-spacing: -0.02em;
+  color: rgba(251, 251, 251, 0.5);
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 1.4;
+  letter-spacing: -0.02em;
 }
 
 .copy-rules-link {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .copy-rules-link:hover,
 .copy-rules-link:focus {
-    color: white;
+  color: white;
 }
 
 /* /footer-wrapper-two */
@@ -209,113 +210,113 @@
 /* Tab */
 
 @media screen and (min-width: 768px) {
-    .footer {
-      
-        padding-bottom: 32px;
-    }
+  .footer {
+    padding-top: 40px;
+    padding-bottom: 32px;
+  }
 
-    .footer-container {
-        max-width: 704px;
-        padding: 40px 40px 28px;
-        
-    }
+  .footer-container {
+    max-width: 704px;
+    padding: 40px 40px 28px;
+    /* margin-bottom: 32px; */
+  }
 
-    .footer-wrapper-one {
-        margin-bottom: 100px;
-        position: relative;
-    }
+  .footer-wrapper-one {
+    margin-bottom: 100px;
+    position: relative;
+  }
 
-    .footer-logo {
-        font-size: 20px;
-    }
+  .footer-logo {
+    font-size: 20px;
+  }
 
-    .footer-media-list {
-        margin-bottom: 86px;
-    }
+  .footer-media-list {
+    margin-bottom: 86px;
+  }
 
-    .footer-media-item {
-        width: 36px;
-        height: 36px;
-    }
+  .footer-media-item {
+    width: 36px;
+    height: 36px;
+  }
 
-    .footer-media-icon {
-        width: 20px;
-        height: 20px;
-    }
+  .footer-media-icon {
+    width: 20px;
+    height: 20px;
+  }
 
-    .footer-phone {
-        position: absolute;
-        top: 0;
-        right: 0;
-        margin: 0;
-    }
+  .footer-phone {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+  }
 
-    .footer-phone-num {
-        min-width: 160px;
-        padding: 15px;
-        font-size: 14px;
-        line-height: 1.28;
-        text-transform: uppercase;
-        text-align: center;
-        color: var(--background);
-        margin: 0;
-    }
+  .footer-phone-num {
+    min-width: 160px;
+    padding: 15px;
+    font-size: 14px;
+    line-height: 1.28;
+    text-transform: uppercase;
+    text-align: center;
+    color: var(--background);
+    margin: 0;
+  }
 
-    .footer-description {
-        max-width: 524px;
-        font-size: 28px;
-        line-height: 1.14;
-    }
+  .footer-description {
+    max-width: 524px;
+    font-size: 28px;
+    line-height: 1.14;
+  }
 
-    .footer-navigation {
-        margin-bottom: 56px;
-    }
+  .footer-navigation {
+    margin-bottom: 56px;
+  }
 
-    .footer-navigation::after {
-        bottom: -28px;
-    }
+  .footer-navigation::after {
+    bottom: -28px;
+  }
 
-    .footer-nav-list {
-        max-width: 100%;
-        flex-wrap: nowrap;
-        gap: 19px;
-    }
+  .footer-nav-list {
+    max-width: 100%;
+    flex-wrap: nowrap;
+    gap: 19px;
+  }
 
-    .footer-nav-link {
-        font-size: 14px;
-        line-height: 1.28;
-    }
+  .footer-nav-link {
+    font-size: 14px;
+    line-height: 1.28;
+  }
 
-    .footer-nav-link::after {
-        top: 28px;
-    }
+  .footer-nav-link::after {
+    top: 28px;
+  }
 
-    .footer-address {
-        max-width: 162px;
-        font-size: 14px;
-        line-height: 1.28;
-    }
+  .footer-address {
+    max-width: 166px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
 
-    .footer-copy {
-        display: flex;
-        justify-content: space-between;
-    }
+  .footer-copy {
+    display: flex;
+    justify-content: space-between;
+  }
 
-    .copy-description {
-        font-size: 14px;
-        line-height: 1.29;
-        margin: 0;
-    }
+  .copy-description {
+    font-size: 14px;
+    line-height: 1.28;
+    margin: 0;
+  }
 
-    .copy-rules-list {
-        display: flex;
-        gap: 20px;
-    }
+  .copy-rules-list {
+    display: flex;
+    gap: 20px;
+  }
 
-    .copy-rules-list {
-        font-size: 14px;
-        line-height: 1.29;
-    }
+  .copy-rules-list {
+    font-size: 14px;
+    line-height: 1.28;
+  }
 }
 
 /* /Tab */
@@ -323,38 +324,39 @@
 /* Desktop */
 
 @media screen and (min-width: 1280px) {
-   
+  .footer {
+    padding-top: 50px;
+  }
 
-    .footer-container {
-        max-width: 1216px;
-       
-    }
+  .footer-container {
+    max-width: 1216px;
+    margin-bottom: 0;
+  }
 
-    .footer-wrapper-one {
-        margin-bottom: 142px;
-        padding: 0;
-    }
+  .footer-wrapper-one {
+    margin-bottom: 142px;
+    padding: 0;
+  }
 
-    .footer-description {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 523px;
-    }
+  .footer-description {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
-    .footer-nav-list {
-        gap: 40px;
-    }
+  .footer-nav-list {
+    gap: 40px;
+  }
 
-    .footer-nav-item {
-        font-size: 14px;
-        line-height: 1.28;
-    }
+  .footer-nav-item {
+    font-size: 14px;
+    line-height: 1.28;
+  }
 
-    .footer-wrapper-two {
-        padding: 0;
-    }
+  .footer-wrapper-two {
+    padding: 0;
+  }
 }
 
 /* /Desktop */
