--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -17,6 +17,7 @@
   justify-content: center;
   gap: 20px;
 }
+
 .catalog-item {
   width: 335px;
   display: flex;
@@ -69,6 +70,11 @@
 .btn-catalog:hover {
   background-color: #1f3cd4;
 }
+@media screen and (max-width: 767px) {
+  .catalog-item:nth-last-child(-n + 2) {
+    display: none;
+  }
+}
 
 @media screen and (min-width: 768px) {
   .catalog {
@@ -83,6 +89,7 @@
     row-gap: 32px;
     column-gap: 16px;
   }
+
   .catalog-item {
     width: 344px;
     padding: 34px 32px 24px;
@@ -110,6 +117,7 @@
   .catalog-list {
     column-gap: 23px;
   }
+
   .catalog-item {
     width: 368px;
     padding: 30px 31px 24px;
